Style About page, fix standings table on mobile

--- a/app/assets/stylesheets/standings.css.scss
+++ b/app/assets/stylesheets/standings.css.scss
@@ -41,3 +41,11 @@
 .weak {
   font-weight: none;
 }
+
+@media only screen and (max-device-width: 480px) {
+  .standings-table {
+    td, th {
+      font-size: 11px;
+    }
+  }
+}
